--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -11,6 +11,7 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
+  VCPKG_ROOT: ${{env.VCPKG_INSTALLATION_ROOT}}
 
 jobs:
   build:
@@ -21,6 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Check precondition
+      run: echo $VCPKG_ROOT
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
