--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -11,7 +11,7 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  VCPKG_ROOT: ${{env.VCPKG_INSTALLATION_ROOT}}
+  VCPKG_ROOT: /usr/local/share/vcpkg
 
 jobs:
   build:
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Check precondition
-      run: echo $VCPKG_ROOT
+      run: echo $VCPKG_ROOT && ls -l $VCPKG_ROOT
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
