--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -27,16 +27,16 @@ jobs:
       run: echo $VCPKG_ROOT && ls -l $VCPKG_ROOT
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake --preset linux-${{env.BUILD_TYPE}} -B ${{github.workspace}}/build
+      run: cmake --preset linux-${{env.BUILD_TYPE}} -B ${{github.workspace}}/out
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --preset linux-${{env.BUILD_TYPE}} --build ${{github.workspace}}/build
+      run: cmake --preset linux-${{env.BUILD_TYPE}} --build ${{github.workspace}}/out
 
     - name: Test
-      working-directory: ${{github.workspace}}/build
+      working-directory: ${{github.workspace}}/out
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
