--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Check precondition
-      run: echo $VCPKG_ROOT && ls -l $VCPKG_ROOT
+    - name: Prepare precondition
+      run: ./Bootstrap.sh
 
     - name: Configure CMake
       # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
