--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -24,7 +24,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Prepare precondition
-      run: ./Bootstrap.sh
+      run: |
+       chmod +x Bootstrap.sh
+       ./Bootstrap.sh
 
     - name: Configure CMake
       # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
