--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Prepare precondition
       run: |
        chmod +x Bootstrap.sh
-       ./Bootstrap.sh
+       sudo ./Bootstrap.sh
 
     - name: Configure CMake
       # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
