--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -11,16 +11,42 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: debug
-  VCPKG_ROOT: /usr/local/share/vcpkg
 
 jobs:
-  build:
+  build_on_windows:
+    runs-on: windows-latest
+
+    steps:
+    - env:
+        VCPKG_ROOT: C:\vcpkg
+
+    - uses: actions/checkout@v4
+
+    - name: Configure CMake
+      # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: cmake --preset linux-${{env.BUILD_TYPE}} -B ${{github.workspace}}/out
+
+    - name: Build
+      # Build your program with the given configuration
+      run: cmake --build ${{github.workspace}}/out --config ${{env.BUILD_TYPE}}
+
+    - name: Test
+      working-directory: ${{github.workspace}}/out
+      # Execute tests defined by the CMake configuration.
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ctest -C ${{env.BUILD_TYPE}}
+   
+  build_on_linux:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
+    - env:
+        VCPKG_ROOT: /usr/local/share/vcpkg
+
     - uses: actions/checkout@v4
 
     - name: Prepare precondition
