--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake --preset linux-${{env.BUILD_TYPE}} -B ${{github.workspace}}/out
+      run: cmake --preset x64-${{env.BUILD_TYPE}} -B ${{github.workspace}}/out
 
     - name: Build
       # Build your program with the given configuration
