--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,23 +49,22 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-# Prepration begin
+      # Prepration begin
     - name: Add msbuild to PATH
-      if: ${{ matrix.os == "windows-latest" }}
+      if: startsWith(matrix.os, 'windows')
       uses: microsoft/setup-msbuild@v2
 
     - name: Set up Visual Studio shell
-      if: ${{ matrix.os == "windows-latest" }}
+      if: startsWith(matrix.os, 'windows')
       uses: egor-tensin/vs-shell@v2
       with:
         arch: x64
 
     - name: Prepare precondition
-      if: ${{ matrix.os == "ubuntu-latest" }}
+      if: startsWith(matrix.os, 'ubuntu')
       run: |
        chmod +x Bootstrap.sh
        sudo ./Bootstrap.sh
-# Prepration end
 
     - name: Configure CMake
       # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -81,4 +80,3 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-   
