--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 # ITNOA
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
 name: Continues Integration
-permissions:
-  contents: read
 
 on:
   push:
@@ -30,19 +28,24 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [Release]
+        preset: [x64-debug, linux-debug]
         cpp_compiler: [g++, cl]
         include:
           - os: windows-latest
             cpp_compiler: cl
+            preset: x64-debug
             vcpkg_path: C:\vcpkg
           - os: ubuntu-latest
             cpp_compiler: g++
+            preset: linux-debug
             vcpkg_path: /usr/local/share/vcpkg
         exclude:
           - os: windows-latest
             cpp_compiler: g++
+            preset: linux-debug
           - os: ubuntu-latest
             cpp_compiler: cl
+            preset: x64-debug
     env:
       VCPKG_ROOT: ${{ matrix.vcpkg_path }}
 
@@ -69,7 +72,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'out' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake --preset x64-${{env.BUILD_TYPE}} -B ${{github.workspace}}/out
+      run: cmake --preset ${{ matrix.preset }} -B ${{github.workspace}}/out
 
     - name: Build
       # Build your program with the given configuration
